appId: com.mathieuf.maestroexpo
tags:
  - pr
---
- runFlow: helper/openApp.yml
- tapOn:
    id: "modal-info"
- assertVisible: "A cool modal"
- swipe:
    from:
      id: "Info"
    direction: "DOWN"
- assertNotVisible: "A cool modal"
